--- a/src/main/webapp/toppage.html
+++ b/src/main/webapp/toppage.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
-  <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
-  <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
-  <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
-</head>
-<body>
-</body>
-</html>
+<ons-page id="toppage">
+
+   <div style="text-align: center">
+     <p>
+     toppage
+     </p>
+   </div>
+ </ons-page>
