--- a/src/main/webapp/toppage.html
+++ b/src/main/webapp/toppage.html
@@ -1,8 +1,7 @@
 <ons-page id="toppage">
-
-   <div style="text-align: center">
-     <p>
-     toppage
-     </p>
-   </div>
- </ons-page>
+	<ons-card>
+		    <img src="https://ja.onsen.io/images/common/img_cloud.png" style="width: 50%">
+	</ons-card>
+    <div>
+    </div>
+</ons-page>
