add travel-comment in thumbnail

--- a/src/main/webapp/toppage.html
+++ b/src/main/webapp/toppage.html
@@ -1,6 +1,17 @@
 <ons-page id="toppage">
 	<ons-card>
-		    <img src="https://ja.onsen.io/images/common/img_cloud.png" style="width: 50%">
+        <ons-list-item>
+        	<div class="left">
+				<img src="https://ja.onsen.io/images/common/img_cloud.png" style="width: 100%">
+			</div>
+          <div class="center">
+            <div class="list-item__title"><b>TGS</b></div>
+            <div class="list-item__subtitle">
+            	david_graham<br>
+            	2018/9/18
+            </div>
+          </div>
+        </ons-list-item>
 	</ons-card>
     <div>
     </div>
