fix position of app-name

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 <body>
 	<ons-page>
 		<ons-toolbar>
-			<div class="center">Memoworld</div>
+			<div class="left">Memoworld</div>
 		</ons-toolbar>
 		<ons-tabbar position="auto">
 			<ons-tab label="top" page="toppage.html" active>
