add page-name next to app-name

--- a/src/main/webapp/toppage.html
+++ b/src/main/webapp/toppage.html
@@ -14,9 +14,10 @@
 	<nav aria-label="breadcrumb">
 	  <ol class="breadcrumb">
 	    <li class="breadcrumb-item active" aria-current="page">Memoworld</li>
+	    <li class="breadcrumb-item active" aria-current="page">みんなの投稿</li>
 	  </ol>
+	</nav>
 	 <!-- 旅行記表示 -->
 	  <div id="cards"></div>
-	</nav>
 </body>
 </html>
