--- a/src/main/webapp/toppage.html
+++ b/src/main/webapp/toppage.html
@@ -17,7 +17,8 @@
 	    <li class="breadcrumb-item active" aria-current="page">みんなの投稿</li>
 	  </ol>
 	</nav>
-	 <!-- 旅行記表示 -->
-	  <div id="cards"></div>
+	<!-- 旅行記表示 -->
+	<div id="cards"></div>
+	<a class="btn btn-secondary" href="post.html" role="button">旅行記投稿</a>	
 </body>
 </html>
