fix making template. make template by js

--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -13,23 +13,13 @@
 		
 	</head>
 	<body>
-		<header class="sticky-top mx-auto" style="width: 400px;">
-			<nav aria-label="breadcrumb">
-			  <ol class="breadcrumb">
-			    <li class="breadcrumb-item active" aria-current="page">Memoworld</li>
-			    
-			    <!--　ページタイトルを変更する -->
-			    <li class="breadcrumb-item active" aria-current="page">みんなの投稿</li>
-			    
-			  </ol>
-			</nav>
-		</header>
-		<footer class="fixed-bottom mx-auto" style="width: 400px;">
+		<div id="header"></div>
 		
-			<!-- ボタンの処理を変更する -->
-			<a class="btn btn-secondary float-right" href="post.html" role="button">旅行記投稿</a>	
-			
-	    </footer>
+		<main>
+			<!-- ページ内容をここに書く -->
+		</main>
+		
+		<div id="footer"></div>
 	</body>
 	
 
