--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -7,16 +7,15 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script src="js/jquery-3.2.1.js"></script>
-		
-		<!-- ページに基づいたjsファイルに変更する -->
-		<script src="js/template.js"></script>	
-		
+		<script src="js/template.js"></script>
+		<script src="js/toppage.js"></script>
 	</head>
 	<body>
 		<div id="header"></div>
 		
-		<main>
+		<main class="sticky-top mx-auto" style="width: 400px;">
 			<!-- ページ内容をここに書く -->
+			<div id="cards"></div>
 		</main>
 		
 		<div id="footer"></div>
