--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -7,6 +7,10 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script src="js/jquery-3.2.1.js"></script>
+		<!--
+		 template.js initTemplateの引数をページタイトルと左下のボタン処理名を書き換えること
+		 ボタン処理がいらない場合は第2引数を抜く
+		 -->
 		<script src="js/template.js"></script>
 		
 		<!-- 使いたいスクリプトを追加 -->
