--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -33,19 +33,19 @@
 			<div class="card">
 				 <div class="card-body">
 				 	<p class="card-text"><small class="text-muted">2018-09-18</small></p>
-				 	<h5 class="card-title">Title</h5>
+				 	<h5 class="card-title">カードテンプレート</h5>
 				 </div>
 			 </div>
 			 
 			 <!-- フォームUI -->
 			 <form>
 				  <div class="form-group">
-				    <label for="userID">ユーザID</label>
-				    <input type="text" class="form-control" id="userID" placeholder="ユーザIDを入力">
+				    <label for="userID">フォームテンプレート1</label>
+				    <input type="text" class="form-control" id="formtemplate1" placeholder="フォームテンプレート">
 				  </div>
 				  <div class="form-group">
-				    <label for="password">パスワード</label>
-				    <input type="text" class="form-control" id="password" placeholder="パスワードを入力する">
+				    <label for="formtemplate2">フォームテンプレート2</label>
+				    <input type="text" class="form-control" id="formtemplate2" placeholder="フォームテンプレート">
 				  </div>
 			</form>
 			
