Remove mistake tab

--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -19,7 +19,7 @@
 	<body>
 		<div id="header"></div>
 		
-		<main class="sticky-top mx-auto" style="width: 400px;">
+		<main class="mx-auto" style="width: 400px;">
 			<!--
 			 ページ内容をここに書く 
 			 mainの中は自由に変えてもらって大丈夫
