ログイン画面でpassとuser_idをapiに渡すところを模索中

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,10 +18,12 @@
 		<div id="cards">
 			<div id="cards-body">
 				<form>
-						<p><strong>ユーザIDを入力してログインください。</strong></p>
+						<p><strong>ユーザIDを入力してください。</strong></p>
 						<input type="text" id="user_id" placeholder="message" required />
-						<p><strong>ユーザIDを入力してログインください。</strong></p>
+						<p><strong>パスワードを入力してください。</strong></p>
 						<input type="text" id="password" placeholder="message" required />
+						<p><strong>名前を入力してください。</strong></p>
+						<input type="text" id="name" placeholder="message" required />
 						<input type="button" id="send" value="ログイン" />
 										
 				</form>
