--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -6,17 +6,25 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-		<script src="js/jquery-3.2.1.js"></script>
 		<!--
 		 template.js initTemplateの引数をページタイトルと左下のボタン処理名を書き換えること
 		 ボタン処理がいらない場合は第2引数を抜く
 		 -->
-		<script src="js/template.js"></script>
+		<script src="js/common.js"></script>
 		
 		<!-- 使いたいスクリプトを追加 -->
 		
 	</head>
-	<body>	
+	<body>
+		<script>
+		/*
+		 * ボタン処理がいらない場合は，第2引数を書かない
+		 * 例：initTemplate("みんなの投稿");
+		 */
+			$(document).ready(function(){
+				initTemplate("タイトルテンプレート", "右下ボタンテンプレート");
+			});
+		</script>
 		<main>	
 			<!--
 			 ページ内容をここに書く 
