fix button template.

--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -37,21 +37,22 @@
 					</div>
 				</div>
 			</div>
-				<!-- ボタンUI -->
-				<a class="btn btn-secondary" href="#" role="button"><p class=" text-center">ボタンテンプレート</p></a>
+			<!-- ボタンUI -->
+			<a class="btn btn-secondary float-left" href="#" role="button">左ボタンテンプレート</a>
+			<a class="btn btn-secondary float-right" href="#" role="button">右ボタンテンプレート</a>
 
-				
-				<!-- フォームUI -->
-				 <form>
-					  <div class="form-group">
-					    <label for="userID">フォームテンプレート1</label>
-					    <input type="text" class="form-control" id="formtemplate1" placeholder="フォームテンプレート">
-					  </div>
-					  <div class="form-group">
-					    <label for="formtemplate2">フォームテンプレート2</label>
-					    <input type="text" class="form-control" id="formtemplate2" placeholder="フォームテンプレート">
-					  </div>
-				</form>
+			
+			<!-- フォームUI -->
+			<form>
+				  <div class="form-group">
+				    <label for="userID">フォームテンプレート1</label>
+				    <input type="text" class="form-control" id="formtemplate1" placeholder="フォームテンプレート">
+				  </div>
+				  <div class="form-group">
+				    <label for="formtemplate2">フォームテンプレート2</label>
+				    <input type="text" class="form-control" id="formtemplate2" placeholder="フォームテンプレート">
+				  </div>
+			</form>
 
 		</main>	
 	</body>
