add comment for bootstrap wiki information

--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -26,6 +26,9 @@
 			 ページ内容をここに書く 
 			 mainの中は自由に変えてもらって大丈夫
 			 共通しそうなUIを用意したので，適宜使うこと
+			 
+			 classにrow col-md-(1~12)を入れ，大きさを調整してください
+			 詳細はGitHubのwikiページに置いてあるbootstrapWikiを見てください
 			-->
 			
 			<!-- カードUI -->
