--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -36,37 +36,40 @@
 				<div class="card-body">
 				 	<small class="text-muted">2018-09-18</small>
 				 	<h5 class="card-title">カードテンプレート</h5>
-				 	<h7 class="card-text">コメントを適当に書くんああああああああああああああああああああああああああああああああああ</h7>
+				 	<h7 class="card-text">
+				 	コメントを適当に書く
+				 	んああああああああああああああああああああああああああああああああああ
+					</h7>
 				</div>
 			</div>
 			
 			<!-- ボタンUI -->
-			<a class="btn btn-secondary" href="#" role="button">ボタンテンプレート</a>
-			<a class="btn btn-secondary float-right" href="#" role="button">右ボタンテンプレート</a>
+			<a class="btn btn-secondary" href="#" role="button">ボタン</a>
+			<a class="btn btn-secondary float-right" href="#" role="button">右ボタン</a>
 
 			<!-- フォームUI -->
 			<!-- 縦並びフォーム -->
 			<form>
 				<div class="form-group row col-md-6">
 					<div class="form-group">
-					    <label for="formtemplate1">フォームテンプレート1</label>
-					    <input type="text" class="form-control" id="formtemplate1" placeholder="フォームテンプレート1">
+					    <label for="formtemplate1">フォーム1</label>
+					    <input type="text" class="form-control" id="formtemplate1" placeholder="フォーム1">
 					</div>
 				</div>
 				  <div class="form-group">
-				    <label for="formtemplate2">フォームテンプレート2</label>
-				    <input type="text" class="form-control" id="formtemplate2" placeholder="フォームテンプレート2">
+				    <label for="formtemplate2">フォーム2</label>
+				    <input type="text" class="form-control" id="formtemplate2" placeholder="フォーム2">
 				  </div>
 			</form>
 			<!-- 横並びフォーム -->
 			<form class="form-inline">
 				<div class="form-group mx-2">
 				  <label for="formtemplate3">テンプレ3</label>
-				  <input type="text" class="form-control" id="formtemplate3" placeholder="フォームテンプレート3">
+				  <input type="text" class="form-control" id="formtemplate3" placeholder="フォーム3">
 				</div>
 				<div class="form-group mx-2">
 				  <label for="formtemplate4">テンプレ4</label>
-				  <input type="text" class="form-control" id="formtemplate4" placeholder="フォームテンプレート4">
+				  <input type="text" class="form-control" id="formtemplate4" placeholder="フォーム4">
 				</div>
 			</form>
 
