fix form template. add margin

--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -70,11 +70,11 @@
 			</form>
 			<!-- 横並びフォーム -->
 			<form class="form-inline">
-				<div class="form-group mx-2">
+				<div class="form-group mx-2 mb-2">
 				  <label for="formtemplate3">テンプレ3</label>
 				  <input type="text" class="form-control" id="formtemplate3" placeholder="フォーム3">
 				</div>
-				<div class="form-group mx-2">
+				<div class="form-group mx-2 mb-2">
 				  <label for="formtemplate4">テンプレ4</label>
 				  <input type="text" class="form-control" id="formtemplate4" placeholder="フォーム4">
 				</div>
