アカウント登録とログインのAPiに値を渡すところまではできた。これからアカウント登録失敗時とログインできなかった時の処理を実装していく

--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -11,7 +11,7 @@
 	<body>
 		<nav aria-label="breadcrumb">
 		  <ol class="breadcrumb">
-		    <li class="breadcrumb-item active" aria-current="page">Login</li>
+		    <li class="breadcrumb-item active" aria-current="page">アカウント登録</li>
 		  </ol>
 		  <div id="cards"></div>
 		</nav>
@@ -22,12 +22,14 @@
 						<input type="text" id="user_id" placeholder="message" required />
 						<p><strong>パスワードを入力してください。</strong></p>
 						<input type="text" id="password" placeholder="message" required />
-						<input type="button" id="send" value="ログイン" />
+						<p><strong>名前を入力してください。</strong></p>
+						<input type="text" id="name" placeholder="message" required />
+						<input type="button" id="send" value="登録" />
 										
 				</form>
-		<script src="js/login.js"></script>
+		<script src="js/account.js"></script>
 			</div>
 		</div>	
-		<a href="account.html">アカウント登録</a>
+		<a href="login.html">ログイン画面</a>
 	</body>
 </html>
