--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -10,49 +10,148 @@
 		<script src="js/common.js"></script>
 		<link rel="stylesheet" href="css/common.css" />
 		<title>旅行記作成</title>
+		<style>
+			.img-keep-ratio {
+				max-width: 100%;
+				max-height: 100%;
+			}
+
+			.photo-description {
+				display: -webkit-box;
+				-webkit-box-orient: vertical;
+				-webkit-line-clamp: 3;	/* 3行分 */
+				line-height: 1.5;
+				height: 4.5rem;	/* = (number of visible lines) * (line-height) * 1rem */
+				overflow: hidden;
+			}
+		</style>
 		<script>
+			function initMap() {
+				const defaultLocation = {lat: -34.397, lng: 150.644};	// TODO: 初期値は現在地
+
+				// 旅程プレビュー用地図
+				let mapPreview = new google.maps.Map(document.getElementById('map-preview'), {
+					center: defaultLocation,
+					zoom: 10
+				});
+				new google.maps.Marker({
+					position: defaultLocation,
+					map: mapPreview,
+					title: 'Hello World!'
+				});
+			}
+
+			function adjustMapSize() {
+				$('[id^=map-]').each(function(i) {
+					$(this).height($(this).width() * 0.75);
+				});
+			}
+
+			$(window).resize(function() {
+				adjustMapSize();
+			});
 			$(document).ready(function(){
 				initTemplate('旅行記作成', '<span class="fas fa-upload"></span> 投稿');
+
+				adjustMapSize();
+
+				$('#add-photo-modal').on('shown.bs.modal', function() {
+					adjustMapSize();
+				});
 			});
 		</script>
 	</head>
 	<body>
-		<main class="container">
+		<main class="container-fluid">
 
-			<div class="card row col-md-12">
-				<div class="card-body">
-					<form class="form-group">
-						<label for="travelogue-title">旅行記タイトル</label>
-						<input type="text" class="form-control" id="travelogue-title" placeholder="タイトル">
+			<div class="row">
+				<div class="col">
+					<form class="form-group mb-4">
+						<input type="text" id="travelogue-title" class="form-control form-control-lg" placeholder="タイトル">
 					</form>
 
-					<div id="photo-list">
+					<div id="photo-list" class="form-group mb-4">
 						<!-- TODO: ここをJSで生成する -->
-						<div id="photo-list-item-1" class="card my-1">
-							ここに登録済み写真
+						<div class="card my-2 px-1">
+							<div class="row d-flex flex-wrap">
+								<div class="col-md-5 text-center" style="max-height: 9rem;">
+									<img src="20181104_003_small.jpg" class="img-keep-ratio align-middle" />
+								</div>
+								<div class="col-md-7 my-auto">
+									<p class="card-text photo-description mb-1">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+									</p>
+									<p class="my-1">
+										<span class="fas fa-clock d-inline-block text-center" title="撮影日時" style="width: 1rem"></span>
+										xxxx/xx/xx xx:xx
+									</p>
+									<p class="mt-1 mb-0">
+										<span class="fas fa-map-marker-alt d-inline-block text-center" title="撮影場所" style="width: 1rem"></span>
+										(xx.xxxx, xx.xxxx) <!-- TODO: 逆引きする？ -->
+									</p>
+								</div>
+							</div>
 						</div>
-						<div id="photo-list-item-2" class="card my-1">
-							ここに登録済み写真
+						<div class="card my-2 px-1">
+							<div class="row d-flex flex-wrap">
+								<div class="col-md-5 text-center" style="max-height: 9rem;">
+									<img src="20181104_003_small.jpg" class="img-keep-ratio align-middle" />
+								</div>
+								<div class="col-md-7 my-auto">
+									<p class="card-text photo-description mb-1">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+									</p>
+									<p class="my-1">
+										<span class="fas fa-clock d-inline-block text-center" title="撮影日時" style="width: 1rem"></span>
+										xxxx/xx/xx xx:xx
+									</p>
+									<p class="mt-1 mb-0">
+										<span class="fas fa-map-marker-alt d-inline-block text-center" title="撮影場所" style="width: 1rem"></span>
+										(xx.xxxx, xx.xxxx) <!-- TODO: 逆引きする？ -->
+									</p>
+								</div>
+							</div>
 						</div>
-						<div id="photo-list-item-3" class="card my-1">
-							ここに登録済み写真
+						<div id="new-photo" class="card mb-1">
+							<div class="row d-flex flex-wrap" style="height: 9rem;">
+								<div class="col text-center" style="height: 100%">
+									選択するやつ
+								</div>
+								<div class="col-md-7 collapse" style="height: 100%">
+									<p class="card-text photo-description mb-1">
+										ここにテキストボックス
+									</p>
+									<p class="my-1">
+										<span class="fas fa-clock d-inline-block text-center" title="撮影日時" style="width: 1rem"></span>
+										時刻選択（デフォは撮影時刻）
+									</p>
+									<p class="mt-1 mb-0">
+										<span class="fas fa-map-marker-alt d-inline-block text-center" title="撮影場所" style="width: 1rem"></span>
+										(xx.xxxx, xx.xxxx) <!-- TODO: 逆引きする？ -->
+									</p>
+								</div>
+							</div>
+							<div class="card-footer">
+								<button type="reset" id="reset-photo-button" class="btn btn-secondary">
+									<span class="fas fa-eraser"></span> リセット
+								</button>
+								<button type="button" id="add-photo-button" class="btn btn-primary float-right">
+									<span class="fas fa-plus"></span> 追加
+								</button>
+							</div>
 						</div>
-					</div>
-					<div class="clearfix">
-						<a class="btn icon-btn btn-primary float-right" href="#" role="button">
-							<span class="fas fa-plus"></span> 写真を追加
-						</a>
 					</div>
 
-					<div id="map-preview">
-						<!-- TODO: Google Map API で地図表示 -->
-						ここに地図を表示
+					<div class="card mb-5">
+						<h5 class="card-header card-title">旅程地図プレビュー</h5>
+						<div id="map-preview" class="card-body"></div>
 					</div>
 				</div>
 			</div>
 
 		</main>
-		<script src="js/post-travelogue.js"></script>
+
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeH3QEuI3KqOwBkkjJ6nYe-jQBTWGDQdw&callback=initMap" async defer></script>
 	</body>
 
 </html>
