--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -14,6 +14,8 @@
 			.img-keep-ratio {
 				max-width: 100%;
 				max-height: 100%;
+				width: auto;
+				height: auto;
 			}
 
 			.photo-description {
@@ -73,9 +75,9 @@
 					<div id="photo-list" class="form-group mb-4">
 						<!-- TODO: ここをJSで生成する -->
 						<div class="card my-2 px-1">
-							<div class="row d-flex flex-wrap">
-								<div class="col-md-5 text-center" style="max-height: 9rem;">
-									<img src="20181104_003_small.jpg" class="img-keep-ratio align-middle" />
+							<div class="row" style="height: 9rem">
+								<div class="col-md-5 d-flex h-100">
+									<img src="DSC_0072.JPG" class="img-keep-ratio m-auto" />
 								</div>
 								<div class="col-md-7 my-auto">
 									<p class="card-text photo-description mb-1">
@@ -93,9 +95,9 @@
 							</div>
 						</div>
 						<div class="card my-2 px-1">
-							<div class="row d-flex flex-wrap">
-								<div class="col-md-5 text-center" style="max-height: 9rem;">
-									<img src="20181104_003_small.jpg" class="img-keep-ratio align-middle" />
+							<div class="row" style="height: 9rem">
+								<div class="col-md-5 d-flex h-100">
+									<img src="20181104_003_small.jpg" class="img-keep-ratio m-auto" />
 								</div>
 								<div class="col-md-7 my-auto">
 									<p class="card-text photo-description mb-1">
