写真と説明文の幅を1:1に変更

--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -75,11 +75,11 @@
 					<div id="photo-list" class="form-group mb-4">
 						<!-- TODO: ここをJSで生成する -->
 						<div class="card my-2 px-1">
-							<div class="row" style="height: 9rem">
-								<div class="col-md-5 d-flex h-100">
+							<div class="row" style="height: 10rem">
+								<div class="col d-flex h-100">
 									<img src="DSC_0072.JPG" class="img-keep-ratio m-auto" />
 								</div>
-								<div class="col-md-7 my-auto">
+								<div class="col my-auto">
 									<p class="card-text photo-description mb-1">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 									</p>
@@ -95,11 +95,11 @@
 							</div>
 						</div>
 						<div class="card my-2 px-1">
-							<div class="row" style="height: 9rem">
-								<div class="col-md-5 d-flex h-100">
+							<div class="row" style="height: 10rem">
+								<div class="col d-flex h-100">
 									<img src="20181104_003_small.jpg" class="img-keep-ratio m-auto" />
 								</div>
-								<div class="col-md-7 my-auto">
+								<div class="col my-auto">
 									<p class="card-text photo-description mb-1">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 									</p>
