ページ間の遷移を実装中、login.htmlからaccount.htmlへの遷移はうまくいきそう

--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -13,7 +13,7 @@
 		  <ol class="breadcrumb">
 		    <li class="breadcrumb-item active" aria-current="page">アカウント登録</li>
 		  </ol>
-		  <div id="cards"></div>
+  		  <div id="cards"><p id="success1"></p></div>
 		</nav>
 		<div id="cards">
 			<div id="cards-body">
