--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -13,21 +13,20 @@
 		  <ol class="breadcrumb">
 		    <li class="breadcrumb-item active" aria-current="page">Login</li>
 		  </ol>
-		  <div id="cards"></div>
+		  <div id="cards"><p id="success1"></p></div>
 		</nav>
 		<div id="cards">
-			<div id="cards-body">
+			<div id = "cards-body">
 				<form>
 						<p><strong>ユーザIDを入力してください。</strong></p>
 						<input type="text" id="user_id" placeholder="message" required />
 						<p><strong>パスワードを入力してください。</strong></p>
 						<input type="text" id="password" placeholder="message" required />
 						<input type="button" id="send" value="ログイン" />
-										
 				</form>
+			</div>
 		<script src="js/login.js"></script>
 			</div>
-		</div>	
 		<a href="account.html">アカウント登録</a>
 	</body>
 </html>
