ファイル選択ボタンの背景を灰色に変更

--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -171,7 +171,7 @@
                 </div>
                 <div id="new-photo" class="card mb-1">
                     <div class="row" style="height: 9rem">
-                        <div class="col d-flex h-100 text-center text-muted" onclick="selectPhoto()">
+                        <div class="col d-flex h-100 text-center text-muted bg-light" onclick="selectPhoto()">
                             <div id="select-photo-button" class="m-auto">
                                 <div><span class="far fa-image font-size-4x"></span></div>
                                 <p>タップして写真を選択</p>
