--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -16,99 +16,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
           integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"/>
     <script src="js/common.js"></script>
+    <script src="js/post.js"></script>
     <link rel="stylesheet" href="css/common.css"/>
+    <link rel="stylesheet" href="css/post.css"/>
     <title>旅行記作成</title>
-    <style>
-        .img-keep-ratio {
-            max-width: 100%;
-            max-height: 100%;
-            width: auto;
-            height: auto;
-        }
-
-        .photo-description {
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 3;	/* 3行分 */
-            line-height: 1.5;
-            height: 4.5rem;	/* = (number of visible lines) * (line-height) * 1rem */
-            overflow: hidden;
-        }
-
-        .font-size-4x {
-            font-size: 4rem;
-        }
-    </style>
-    <script>
-        function initMap() {
-            const defaultLocation = {lat: -34.397, lng: 150.644};	// TODO: 初期値は現在地
-
-            // 旅程プレビュー用地図
-            let mapPreview = new google.maps.Map(document.getElementById('map-preview'), {
-                center: defaultLocation,
-                zoom: 10
-            });
-            new google.maps.Marker({
-                position: defaultLocation,
-                map: mapPreview,
-                title: 'Hello World!'
-            });
-        }
-
-        function adjustMapSize() {
-            $('[id^=map-]').each(function(i) {
-                $(this).height($(this).width() * 0.75);
-            });
-        }
-
-        function clearInputData() {
-            console.log('ここで入力データをクリアする');
-        }
-
-        $(window).resize(function() {
-            adjustMapSize();
-        });
-
-        $(document).ready(function(){
-            initTemplate('旅行記作成', '<span class="fas fa-upload"></span> 投稿');
-
-            adjustMapSize();
-
-            $('#add-photo-modal').on('shown.bs.modal', function() {
-                adjustMapSize();
-            });
-
-            // ファイル選択ボタンがタップされたらファイル選択ダイアログを開く
-            $('#select-photo-button').on('click', function() {
-                $('#file-input').click();
-            });
-
-            $('#file-input').on('change', function(event) {
-                console.log('ここで選択されたファイルを取得する');
-                console.log(event.target.files);
-
-                $('.photo-property-form').removeClass('d-none');
-                $('.photo-property-form').addClass('d-flex');
-            });
-
-            $('#photo-taken-location').on('click', function() {
-                console.log('ここで撮影場所指定モーダルを表示する');
-            });
-
-            $('#reset-photo-button').on('click', function() {
-                $('.photo-property-form').removeClass('d-flex');
-                $('.photo-property-form').addClass('d-none');
-
-                clearInputData();
-            });
-
-            $('#add-photo-button').on('click', function() {
-                console.log('ここで POST /api/photos する');
-
-                clearInputData();
-            });
-        });
-    </script>
 </head>
 <body>
 <main class="container-fluid">
