ファイル選択ダイアログを開いたときに画像ファイルのみ表示されるように変更

--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -97,7 +97,7 @@
                         <div id="selected-photo-area" class="col d-none h-100 text-center">
                             <img src="20181104_003_small.jpg" id="selected-photo" class="img-keep-ratio m-auto"/>
                         </div>
-                        <input type="file" id="file-input" class="d-none" tabindex="-1" />
+                        <input type="file" id="file-input" class="d-none" tabindex="-1" accept="image/*" />
                         <div class="photo-property-form col h-100 d-none">
                             <div class="w-100 m-auto">
                                 <div class="input-group my-1 pr-1">
