--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -86,8 +86,8 @@
                         </div>
                     </div>
                 </div>
-                <div id="new-photo" class="card mb-1">
-                    <div class="row" style="height: 9rem">
+                <div id="new-photo" class="card mb-1 px-1">
+                    <div class="row" style="height: 10rem">
                         <div id="select-photo-button" class="col d-flex h-100 text-center text-muted bg-light">
                             <p class="m-auto">
                                 <span class="far fa-image font-size-4x"></span><br />
@@ -95,7 +95,7 @@
                             </p>
                         </div>
                         <div id="selected-photo-area" class="col d-none h-100 text-center">
-                            <img src="20181104_003_small.jpg" id="selected-photo" class="img-keep-ratio m-auto"/>
+                            <img src="img/nowloading.png" id="selected-photo" class="img-keep-ratio m-auto"/>
                         </div>
                         <input type="file" id="file-input" class="d-none" tabindex="-1" accept="image/*" />
                         <div class="photo-property-form col h-100 d-none">
