add argument for footer button url on script-tag of template.html.

--- a/src/main/webapp/template.html
+++ b/src/main/webapp/template.html
@@ -18,7 +18,7 @@
 		 * 例：initTemplate("みんなの投稿");
 		 */
 			$(document).ready(function(){
-				initTemplate("タイトルテンプレート", "右下ボタンテンプレート");
+				initTemplate("タイトルテンプレート", "右下ボタンテンプレート", "template.html");
 			});
 		</script>
 		<main class="container">	
