--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -56,12 +56,12 @@
                             <p class="mt-1 mb-0">
                                 <span class="fas fa-map-marker-alt d-inline-block text-center" title="撮影場所"
                                       style="width: 1rem"></span>
-                                (xx.xxxx, xx.xxxx) <!-- TODO: 逆引きする？ -->
+                                xx.xxxx, xx.xxxx <!-- TODO: 逆引きする？ -->
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="card my-2">
+                <div class="card my-2 px-1">
                     <div class="row" style="height: 10rem">
                         <div class="col d-flex h-100">
                             <img src="20181104_003_small.jpg" class="img-keep-ratio m-auto"/>
@@ -83,7 +83,7 @@
                             <p class="mt-1 mb-0">
                                 <span class="fas fa-map-marker-alt d-inline-block text-center" title="撮影場所"
                                       style="width: 1rem"></span>
-                                (xx.xxxx, xx.xxxx) <!-- TODO: 逆引きする？ -->
+                                xx.xxxx, xx.xxxx <!-- TODO: 逆引きする？ -->
                             </p>
                         </div>
                     </div>
