--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="row photo-property-form d-none my-1">
                         <div class="col">
-                            <textarea class="form-control photo-description" rows="5"
+                            <textarea id="photo-description" class="form-control photo-description" rows="5"
                                       placeholder="写真の説明"></textarea>
                         </div>
                     </div>
